git-annex (8.20200310) UNRELEASED; urgency=medium

  * Fix a minor bug that caused options provided with -c to be passed
    multiple times to git.

 -- Joey Hess <id@joeyh.name>  Mon, 16 Mar 2020 12:43:33 -0400

git-annex (8.20200309) upstream; urgency=medium

  * Fix bug that caused unlocked annexed dotfiles to be added to git by the
    smudge filter when annex.dotfiles was not set.
  * Upgrade other repos than the current one by running git-annex upgrade
    inside them, which avoids problems with upgrade code making assumptions
    that the cwd will be inside the repo being upgraded. In particular,
    this fixes a problem where upgrading a v7 repo to v8 caused an ugly
    git error message.
  * Fix upgrade failure when a file has been deleted from the working tree.
  * Fix regression 1 month ago that prevented external special remotes from
    using GETCONFIG to query values like "name".
  * Improve behavior when a directory git-annex is writing to gets
    unmounted. Previously it could in some cases re-create the mount point
    and directory tree, and even write object contents to the wrong disk.
  * Don't ignore --debug when it is followed by -c.
  * whereis: If a remote fails to report on urls where a key
    is located, display a warning, rather than giving up and not displaying
    any information.
  * When external special remotes fail but neglect to provide an error
    message, say what request failed, which is better than displaying an
    empty error message to the user.
  * git-annex config: Only allow configs be set that are ones git-annex
    actually supports reading from repo-global config, to avoid confusion.
  * Avoid converting .git file in a worktree or submodule to a symlink
    when the repository is not a git-annex repository.
  * Linux standalone: Use md5sum to shorten paths in .cache/git-annex/locales
  * Fix build with ghc 8.8 (MonadFail)
    Thanks, Peter Simons
  * stack.yaml: Updated to lts-14.27.
