@@ -1,5 +1,7 @@
 git-annex (8.20200310) UNRELEASED; urgency=medium
 
+  * webdav: Made exporttree remotes faster by caching connection to the
+    server.
   * Fix a minor bug that caused options provided with -c to be passed
     multiple times to git.
 
